pkg/gox/testdata/errors/malformed_attr_expression.gox
package main

func App() any {
	return <input value={name +} />
}
